[metadata]
name = unRL (AKA "_unreal_") is a set of libraries providing Reinforcement Learning algorithms implemented with PyTorch and Jax frameworks.
version = 0.0.37
description = unRL
authors = Rafael Afonso Rodrigues
url = https://github.com/rafonsor/unRL
license = Apache-2.0

[options]
install_requires =
    gymnasium[toy-text]
    jax
    matplotlib
    pandas
    seaborn
    torch>=2.1